# package_read_free_editorials

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/free_editorials/: read_free.py
src/pyspark_utils/: data_prep.py  evaluate.py  train.py
tests/: test.py
