[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "free_editorials"
version = "0.0.1"
authors = [
  { name="Abhishek Singh", email="xyz@gmail.com" },
]
description = "A Python package to help you read editorials without subscribing."
readme = "README.md"
requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/abhishek-colab/package_read_free_editorials.git"
"Bug Tracker" = "https://github.com/abhishek-colab/package_read_free_editorials.git/issues"